# ds-free-api

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.en.md  README.md  config.example.toml  justfile
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  config.example.toml
docs/: code-style.md  deepseek-api-reference.md  development.md
docs/en/: development.md
examples/: adapter_cli.rs
py-e2e-tests/: config.toml  pyproject.toml  runner.py  stress_runner.py  stress_test_common.py  stress_test_tools_anthropic.py  stress_test_tools_openai.py
py-e2e-tests/anthropic_endpoint/: conftest.py  test_messages.py  test_protocol.py  test_smoke.py
py-e2e-tests/openai_endpoint/: conftest.py  test_chat_completions.py  test_protocol.py  test_smoke.py
py-e2e-tests/scenarios/basic/anthropic/: 04_document_base64.json
py-e2e-tests/scenarios/basic/openai/: 05_file_inline.json
py-e2e-tests/scenarios/repair/: 01_xml_basic.json  02_xml_multi_param.json  03_xml_mixed_tools.json
src/: config.rs  ds_core.rs  lib.rs  openai_adapter.rs  server.rs
src/anthropic_compat/: request.rs  types.rs
src/anthropic_compat/response/: stream.rs
src/ds_core/: accounts.rs  client.rs  completions.rs
src/openai_adapter/: models.rs  request.rs  response.rs
src/openai_adapter/request/: files.rs  prompt.rs  resolver.rs  tools.rs
src/openai_adapter/response/: converter.rs  sse_parser.rs  (+2 more)
src/server/: admin.rs  auth.rs  handlers.rs  runtime_log.rs  store.rs  stream.rs
web/: package.json  vite.config.ts
web/src/: App.tsx
(+3 files in other folders)
