[project]
name = "py-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.31.0",
    "anthropic>=0.40.0",
    "pytest>=9.0.3",
    "pytest-xdist>=3.6.1",
]

[tool.pytest.ini_options]
markers = [
    "requires_server: tests that require the ds-free-api server to be running",
]
